syntax = "proto3";
package petri.auction.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "petri/auction/v1beta1/params.proto";
import "petri/auction/v1beta1/auction.proto";
import "petri/auction/v1beta1/biddings.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/petrichormoney/petri/x/auction/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

//SURPLUS

message QuerySurplusAuctionRequest {
  uint64 app_id = 1;
  uint64 auction_mapping_id = 2;
  uint64 auction_id = 3;
  bool history = 4;
}

message QuerySurplusAuctionResponse {
  SurplusAuction auction = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"auction\""];
}

message QuerySurplusAuctionsRequest {
  uint64 app_id = 1;
  bool history = 2;
  cosmos.base.query.v1beta1.PageRequest pagination = 3
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QuerySurplusAuctionsResponse {
  repeated SurplusAuction auctions = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"auctions\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QuerySurplusBiddingsRequest {
  string bidder = 1;
  uint64 app_id = 2;
  bool history = 3;
  cosmos.base.query.v1beta1.PageRequest pagination = 4
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QuerySurplusBiddingsResponse {
  string bidder = 1 [
    (gogoproto.moretags) = "yaml:\"bidder\""
  ];
  repeated SurplusBiddings biddings = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"biddings\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 3
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

//DEBT

message QueryDebtAuctionRequest {
  uint64 app_id = 1;
  uint64 auction_mapping_id = 2;
  uint64 auction_id = 3;
  bool history = 4;
}

message QueryDebtAuctionResponse {
  DebtAuction auction = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"auction\""];
  cosmos.base.query.v1beta1.PageRequest pagination = 3
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryDebtAuctionsRequest {
  uint64 app_id = 1;
  bool history = 2;
  cosmos.base.query.v1beta1.PageRequest pagination = 3
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryDebtAuctionsResponse {
  repeated DebtAuction auctions = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"auctions\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryDebtBiddingsRequest {
  string bidder = 1;
  uint64 app_id = 2;
  bool history = 3;
  cosmos.base.query.v1beta1.PageRequest pagination = 4
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryDebtBiddingsResponse {
  string bidder = 1 [
    (gogoproto.moretags) = "yaml:\"bidder\""
  ];
  repeated DebtBiddings biddings = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"biddings\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 3
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}


//DUTCH

message QueryDutchAuctionRequest {
  uint64 app_id = 1;
  uint64 auction_mapping_id = 2;
  uint64 auction_id = 3;
  bool history = 4;
}

message QueryDutchAuctionResponse {
  DutchAuction auction = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"auction\""];
}

message QueryDutchAuctionsRequest {
  uint64 app_id = 1;
  bool history = 2;
  cosmos.base.query.v1beta1.PageRequest pagination = 3
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryDutchAuctionsResponse {
  repeated DutchAuction auctions = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"auctions\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryDutchBiddingsRequest {
  string bidder = 1;
  uint64 app_id = 2;
  bool history = 3;
  cosmos.base.query.v1beta1.PageRequest pagination = 4
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryDutchBiddingsResponse {
  string bidder = 1 [
    (gogoproto.moretags) = "yaml:\"bidder\""
  ];
  repeated DutchBiddings biddings = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"biddings\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 3
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}


message QueryBiddingsForSurplusAuctionRequest {
  uint64 app_id = 1;
  uint64 auction_mapping_id = 2;
  uint64 auction_id = 3;
  bool history = 4;
  cosmos.base.query.v1beta1.PageRequest pagination = 5
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryBiddingsForSurplusAuctionResponse {
  repeated  SurplusBiddings biddings = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"biddings\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryProtocolStatisticsRequest {
  uint64 app_id = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];

}

message  QueryProtocolStatisticsResponse {
  repeated ProtocolStatistics stats = 1[
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"ProtocolStatistics\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];
}

message QueryAuctionParamRequest {
  uint64 app_id = 1;
}

message QueryAuctionParamResponse {
  AuctionParams auctionParams = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"auction_params\""];
}

message QueryDutchLendAuctionRequest {
  uint64 app_id = 1;
  uint64 auction_mapping_id = 2;
  uint64 auction_id = 3;
  bool history = 4;
}

message QueryDutchLendAuctionResponse {
  DutchAuction auction = 1
  [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"auction\""];
}

message QueryDutchLendAuctionsRequest {
  uint64 app_id = 1;
  bool history = 2;
  cosmos.base.query.v1beta1.PageRequest pagination = 3
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryDutchLendAuctionsResponse {
  repeated DutchAuction auctions = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"auctions\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryDutchLendBiddingsRequest {
  string bidder = 1;
  uint64 app_id = 2;
  bool history = 3;
  cosmos.base.query.v1beta1.PageRequest pagination = 4
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryDutchLendBiddingsResponse {
  string bidder = 1 [
    (gogoproto.moretags) = "yaml:\"bidder\""
  ];
  repeated DutchBiddings biddings = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"biddings\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 3
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryFilterDutchAuctionsRequest {
  uint64 app_id = 1;
  repeated string denom = 2;
  bool history = 3;
  cosmos.base.query.v1beta1.PageRequest pagination = 4
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

message QueryFilterDutchAuctionsResponse {
  repeated DutchAuction auctions = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"auctions\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
  [(gogoproto.moretags) = "yaml:\"pagination\""];
}

service Query {
  rpc QuerySurplusAuction(QuerySurplusAuctionRequest) returns (QuerySurplusAuctionResponse) {
    option (google.api.http).get = "/petri/auction/v1beta1/surplusauction/{app_id}/{auction_mapping_id}/{auction_id}/{history}";
  }
  rpc QuerySurplusAuctions(QuerySurplusAuctionsRequest) returns (QuerySurplusAuctionsResponse) {
    option (google.api.http).get = "/petri/auction/v1beta1/surplusauctions/{app_id}/{history}";
  }
  rpc QuerySurplusBiddings(QuerySurplusBiddingsRequest) returns (QuerySurplusBiddingsResponse) {
    option (google.api.http).get = "/petri/auction/v1beta1/surplusbiddings/{bidder}/{app_id}/{history}";
  }
  rpc QueryDebtAuction(QueryDebtAuctionRequest) returns (QueryDebtAuctionResponse) {
    option (google.api.http).get = "/petri/auction/v1beta1/debtauction/{app_id}/{auction_mapping_id}/{auction_id}/{history}";
  }
  rpc QueryDebtAuctions(QueryDebtAuctionsRequest) returns (QueryDebtAuctionsResponse) {
    option (google.api.http).get = "/petri/auction/v1beta1/debtauctions/{app_id}/{history}";
  }
  rpc QueryDebtBiddings(QueryDebtBiddingsRequest) returns (QueryDebtBiddingsResponse) {
    option (google.api.http).get = "/petri/auction/v1beta1/debtbiddings/{bidder}/{app_id}/{history}";
  }
  rpc QueryDutchAuction(QueryDutchAuctionRequest) returns (QueryDutchAuctionResponse) {
    option (google.api.http).get = "/petri/auction/v1beta1/dutchauction/{app_id}/{auction_mapping_id}/{auction_id}/{history}";
  }
  rpc QueryDutchAuctions(QueryDutchAuctionsRequest) returns (QueryDutchAuctionsResponse) {
    option (google.api.http).get = "/petri/auction/v1beta1/dutchauctions/{app_id}/{history}";
  }
  rpc QueryDutchBiddings(QueryDutchBiddingsRequest) returns (QueryDutchBiddingsResponse) {
    option (google.api.http).get = "/petri/auction/v1beta1/dutchbiddings/{bidder}/{app_id}/{history}";
  }
  rpc QueryParams(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/petri/auction/v1beta1/params";
  }
  rpc QueryProtocolStatistics(QueryProtocolStatisticsRequest) returns (QueryProtocolStatisticsResponse) {
    option (google.api.http).get = "/petri/auction/v1beta1/protocolstats/{app_id}";
  }
  rpc QueryAuctionParams(QueryAuctionParamRequest) returns (QueryAuctionParamResponse) {
    option (google.api.http).get = "/petri/auction/v1beta1/auctionparams/{app_id}";
  }
  rpc QueryDutchLendAuction(QueryDutchLendAuctionRequest) returns (QueryDutchLendAuctionResponse) {
    option (google.api.http).get = "/petri/auction/v1beta1/dutchlendauction/{app_id}/{auction_mapping_id}/{auction_id}/{history}";
  }
  rpc QueryDutchLendAuctions(QueryDutchLendAuctionsRequest) returns (QueryDutchLendAuctionsResponse) {
    option (google.api.http).get = "/petri/auction/v1beta1/dutchlendauctions/{app_id}/{history}";
  }
  rpc QueryDutchLendBiddings(QueryDutchLendBiddingsRequest) returns (QueryDutchLendBiddingsResponse) {
    option (google.api.http).get = "/petri/auction/v1beta1/dutchlendbiddings/{bidder}/{app_id}/{history}";
  }
  rpc QueryFilterDutchAuctions(QueryFilterDutchAuctionsRequest) returns (QueryFilterDutchAuctionsResponse) {
    option (google.api.http).get = "/petri/auction/v1beta1/filterdutchauctions/{app_id}/{denom}/{history}";
  }
}
